--- a/04-Time-Series-Decomposition/06-MSTL-decomposition.ipynb
+++ b/04-Time-Series-Decomposition/06-MSTL-decomposition.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "special-institution",
    "metadata": {},
@@ -23,6 +24,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31a9ae6b",
    "metadata": {},
@@ -41,7 +43,19 @@
    "execution_count": 1,
    "id": "multiple-september",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'MSTL' from 'statsmodels.tsa.seasonal' (/home/rodrigo/.cache/pypoetry/virtualenvs/feature_engineering_for_time_series_foreca-gyJRm-35-py3.9/lib/python3.9/site-packages/statsmodels/tsa/seasonal.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstatsmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtsa\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseasonal\u001b[39;00m \u001b[39mimport\u001b[39;00m MSTL\n\u001b[1;32m      7\u001b[0m sns\u001b[39m.\u001b[39mset_style(\u001b[39m\"\u001b[39m\u001b[39mdarkgrid\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      8\u001b[0m sns\u001b[39m.\u001b[39mset_context(\u001b[39m\"\u001b[39m\u001b[39mposter\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'MSTL' from 'statsmodels.tsa.seasonal' (/home/rodrigo/.cache/pypoetry/virtualenvs/feature_engineering_for_time_series_foreca-gyJRm-35-py3.9/lib/python3.9/site-packages/statsmodels/tsa/seasonal.py)"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -54,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "legislative-trout",
    "metadata": {},
@@ -63,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "familiar-court",
    "metadata": {},
    "outputs": [],
@@ -78,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "respective-personal",
    "metadata": {},
    "outputs": [
@@ -155,6 +170,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "private-petersburg",
    "metadata": {},
@@ -164,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fewer-dietary",
    "metadata": {},
    "outputs": [
@@ -246,6 +262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e56aa2bf-80ef-4407-86de-90bff204c5cf",
    "metadata": {},
@@ -255,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "90354cde-d750-4ea7-934e-71037c9d099c",
    "metadata": {
     "tags": []
@@ -270,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "83ec70af-1018-46e5-bbef-efec1cb72f27",
    "metadata": {
     "tags": []
@@ -297,6 +314,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7951ea1b-8719-43db-a38e-8f2a79b24e36",
    "metadata": {},
@@ -306,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "90064aa7-77fa-4830-be46-ca4ca4db6e9d",
    "metadata": {
     "tags": []
@@ -365,6 +383,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7c357da0-b495-4781-b565-3de5d57d83f9",
    "metadata": {},
@@ -373,6 +392,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70391085-cd7e-4f85-88af-7cea041276ff",
    "metadata": {},
@@ -382,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3251a3d9-4fd0-4b4f-ba3c-ee11299cf5c9",
    "metadata": {
     "tags": []
@@ -425,6 +445,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2077f831-786e-4df7-907c-188a6d45a11c",
    "metadata": {},
@@ -433,6 +454,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "returning-commercial",
    "metadata": {},
@@ -441,6 +463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04112ddf-e272-40df-9ad4-3af0310ac711",
    "metadata": {},
@@ -458,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "007e3b4f-ef53-45c6-94f3-e772a32761dc",
    "metadata": {},
    "outputs": [],
@@ -468,6 +491,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8c65e67e-12a5-4aa1-924a-cd1c06c28c74",
    "metadata": {},
@@ -477,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "81977265-b888-4835-94b0-57706c6e5711",
    "metadata": {},
    "outputs": [
@@ -504,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "feb21c92-b706-4791-9f1a-d758641ef0be",
    "metadata": {},
    "outputs": [
@@ -589,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8b744c08-2a9b-4c98-85b8-dbdf35064a45",
    "metadata": {},
    "outputs": [
@@ -615,6 +639,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1557707d-8a90-407e-a215-19809ce31dbf",
    "metadata": {},
@@ -624,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "charged-masters",
    "metadata": {},
    "outputs": [
@@ -663,6 +688,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "25977848-bea5-49fb-ae54-5a385c7ce2cd",
    "metadata": {},
@@ -671,6 +697,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "703dcfb3-d760-4cda-ad52-4d8c4fdd0048",
    "metadata": {},
@@ -680,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b4205d1e-e389-439f-88ca-a3e9f86e215d",
    "metadata": {},
    "outputs": [
@@ -725,6 +752,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09d2f4ef-3b43-4f32-b1d4-a0150668c97d",
    "metadata": {},
@@ -733,6 +761,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04363304-73cf-4ecd-952d-63caf281a1fc",
    "metadata": {},
@@ -742,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "608352d7-90f8-423d-af65-4291475931a3",
    "metadata": {},
    "outputs": [
@@ -841,6 +870,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6fb31614-fd4c-476c-b8d2-cb7c390febb1",
    "metadata": {},
@@ -849,6 +879,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1b6d817a-aa21-4e8e-b94c-4dc8e0d7bb89",
    "metadata": {},
@@ -873,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.2"
   },
   "vscode": {
    "interpreter": {
