--- a/07-Lag-Features/08-air-pollution-example-correlation.ipynb
+++ b/07-Lag-Features/08-air-pollution-example-correlation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "nervous-beauty",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "qualified-following",
    "metadata": {},
@@ -37,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "267100f1",
    "metadata": {},
@@ -55,7 +58,19 @@
    "execution_count": 1,
    "id": "chronic-fundamentals",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'MSTL' from 'statsmodels.tsa.seasonal' (/home/rodrigo/.cache/pypoetry/virtualenvs/feature_engineering_for_time_series_foreca-gyJRm-35-py3.9/lib/python3.9/site-packages/statsmodels/tsa/seasonal.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstatsmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnonparametric\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39msmoothers_lowess\u001b[39;00m \u001b[39mimport\u001b[39;00m lowess\n\u001b[1;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstatsmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtsa\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mstattools\u001b[39;00m \u001b[39mimport\u001b[39;00m ccf\n\u001b[0;32m---> 11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstatsmodels\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtsa\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mseasonal\u001b[39;00m \u001b[39mimport\u001b[39;00m MSTL, STL, seasonal_decompose\n\u001b[1;32m     12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mticker\u001b[39;00m \u001b[39mimport\u001b[39;00m MaxNLocator\n\u001b[1;32m     14\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'MSTL' from 'statsmodels.tsa.seasonal' (/home/rodrigo/.cache/pypoetry/virtualenvs/feature_engineering_for_time_series_foreca-gyJRm-35-py3.9/lib/python3.9/site-packages/statsmodels/tsa/seasonal.py)"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "\n",
@@ -76,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "false-spell",
    "metadata": {},
@@ -85,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "nuclear-television",
    "metadata": {},
    "outputs": [],
@@ -106,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cardiac-knitting",
    "metadata": {},
    "outputs": [],
@@ -121,6 +137,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "present-customs",
    "metadata": {},
@@ -130,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "corporate-factory",
    "metadata": {},
    "outputs": [
@@ -312,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "foreign-merit",
    "metadata": {},
    "outputs": [
@@ -493,6 +510,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "empty-suicide",
    "metadata": {},
@@ -512,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "valued-leonard",
    "metadata": {},
    "outputs": [],
@@ -523,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "careful-cooper",
    "metadata": {},
    "outputs": [],
@@ -535,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "virtual-stand",
    "metadata": {},
    "outputs": [],
@@ -553,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "removed-patrick",
    "metadata": {},
    "outputs": [],
@@ -564,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "blocked-product",
    "metadata": {},
    "outputs": [
@@ -673,6 +691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "freelance-arnold",
    "metadata": {},
@@ -681,6 +700,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "chicken-calculator",
    "metadata": {},
@@ -690,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "hungry-system",
    "metadata": {},
    "outputs": [],
@@ -700,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "subtle-defensive",
    "metadata": {},
    "outputs": [
@@ -728,6 +748,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "adopted-token",
    "metadata": {},
@@ -736,6 +757,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "handled-mitchell",
    "metadata": {},
@@ -745,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "graphic-arbor",
    "metadata": {
     "tags": []
@@ -851,6 +873,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "geographic-acting",
    "metadata": {},
@@ -860,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "referenced-robinson",
    "metadata": {
     "tags": []
@@ -966,6 +989,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "rocky-cooper",
    "metadata": {},
@@ -974,6 +998,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "sustained-ferry",
    "metadata": {},
@@ -983,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "unique-modification",
    "metadata": {
     "tags": []
@@ -1089,6 +1114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "satisfied-computer",
    "metadata": {},
@@ -1097,6 +1123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "spatial-documentary",
    "metadata": {},
@@ -1105,6 +1132,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "conditional-swing",
    "metadata": {},
@@ -1113,6 +1141,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "gentle-wrapping",
    "metadata": {},
@@ -1121,6 +1150,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "harmful-spain",
    "metadata": {},
@@ -1130,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "threatened-programming",
    "metadata": {
     "tags": []
@@ -1237,6 +1267,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "descending-mixer",
    "metadata": {},
@@ -1246,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "representative-hypothetical",
    "metadata": {},
    "outputs": [
@@ -1351,6 +1382,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "electronic-charles",
    "metadata": {},
@@ -1359,6 +1391,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "corresponding-minutes",
    "metadata": {},
@@ -1367,6 +1400,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "neutral-running",
    "metadata": {},
@@ -1375,6 +1409,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "organizational-white",
    "metadata": {},
@@ -1384,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "light-shopping",
    "metadata": {
     "tags": []
@@ -1493,6 +1528,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "coupled-player",
    "metadata": {},
@@ -1501,6 +1537,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "several-yemen",
    "metadata": {},
@@ -1510,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "elegant-watershed",
    "metadata": {},
    "outputs": [
@@ -1613,6 +1650,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "operational-improvement",
    "metadata": {},
@@ -1623,6 +1661,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8655655-7e3e-436d-9a3e-02d658843d4a",
    "metadata": {},
@@ -1647,7 +1686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
