--- a/08-Window-Features/05-window-features-with-feature-selection.ipynb
+++ b/08-Window-Features/05-window-features-with-feature-selection.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "complicated-voluntary",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "promotional-worcester",
    "metadata": {},
@@ -20,6 +22,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "876b948e-2e7f-4321-9ff8-1b9734f4be6f",
    "metadata": {},
@@ -45,6 +48,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "confirmed-things",
    "metadata": {},
@@ -164,6 +168,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "46cb4696-4300-45e6-9b91-aa99e8f7b938",
    "metadata": {},
@@ -1357,6 +1362,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1fe718e6-af6e-4b8a-9943-a806cd6850fd",
    "metadata": {},
@@ -1365,6 +1371,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0d3c3402-23ce-46a2-9584-b05e621e31a4",
    "metadata": {},
@@ -1387,6 +1394,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0664a776-0c86-42bb-b70e-e396cf3e4da6",
    "metadata": {},
@@ -1518,6 +1526,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c72bc42-a897-4f58-95d2-3c6ff7dbb997",
    "metadata": {},
@@ -1542,7 +1551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
